--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 spring.application.name=tripmate
+# H2 In-Memory DB Configuration
+spring.datasource.url=jdbc:h2:mem:tripmate
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# Show SQL in console (optional but helpful)
+spring.jpa.show-sql=true
+
+# Auto-create/update tables based on entities
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# Enable H2 Console (to view tables in browser)
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
